# MCR-Agent

./: .gitignore  README.md
code/: README.md  pyproject.toml
code/mcr/: __init__.py  chains.py  perturb.py  reliability.py  simulate.py  trace_to_chain.py  uncertainty.py
code/mcr.egg-info/: PKG-INFO  SOURCES.txt
code/notebooks/: theorem_sanity.ipynb
code/sim/: SS1_cf_vs_mc.py  SS2_perturbation.py  SS3_correlation.py  SS4_nhpp_limit.py  SS5_prism_cross.py  SS6_mast_case_study.py  SS7_cross_benchmark.py  SS7_goodness_of_fit.py  SS8_uncertainty_quantification.py  SS9_heldout_empirical.py  mast_adapter.py
data/: benchmark_archetypes.json
data/mast_derived/: SS6_summary.json  SS8_state_taxonomy.tex  SS8_state_taxonomy_full.tex  SS8_uq_ranges.tex  SS8_uq_summary.json  SS9_heldout_summary.json  SS9_heldout_summary.tex
data/synthetic/: SS1_summary.json  SS2_summary.json  SS3_summary.json  SS4_summary.json  SS5_summary.json  SS7_summary.json  seeds.json
data/synthetic/prism_models/: chain_00.pm  chain_01.pctl  chain_01.pm  chain_02.pm  chain_03.pm  chain_04.pm
