[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcr"
version = "0.1.0"
description = "Markov-Chain Reliability toolkit for absorbing agent chains"
requires-python = ">=3.9"
dependencies = ["numpy>=1.22"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mcr*"]
